force-app/main/default/objects/Field_Service_Transaction_Log__c/Field_Service_Transaction_Log__c.object-meta.xml
<CustomObject>
    <label>Field Service Transaction Log</label>
    <nameField>
        <displayFormat>FSTL-{000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Service Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>