force-app/main/default/objects/Field_Service_Transaction_Log__c/fields/Link_To_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Record__c</fullName>
    <formula>IF(NOT(ISBLANK(Record_Id__c)), HYPERLINK(&quot;/&quot; &amp; Record_Id__c, &quot;Open record&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link To Record</label>
    <type>Text</type>
</CustomField>