force-app/main/default/objects/Field_Service_Transaction_Log__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>