force-app/main/default/objects/Field_Service_Transaction_Log__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>