force-app/main/default/objects/Field_Service_Transaction_Log__c/listViews/All_Transaction_Logs.listView-meta.xml
<ListView>
    <fullName>All_Transaction_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Time__c</columns>
    <columns>Event__c</columns>
    <columns>Object__c</columns>
    <columns>Record_Action__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Link_To_Record__c</columns>
    <columns>Transaction_Context__c</columns>
    <columns>Transaction_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Transaction Logs</label>
</ListView>